--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,33 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Finlandica:ital@1&family=Inter&display=swap');
+
 *{
     margin: 0;
     font-family: 'Finlandica', sans-serif;
     font-family: 'Inter', sans-serif;
 }
 body{
-    background-image: linear-gradient(to right top, #f8f8f8, #f9f9f9, #fafbfa, #fcfcfc, #fdfdfd, #f0edf6, #e5dcee, #dccbe5, #cda2c9, #c378a4, #b64c77, #a41245);   
+    background-image: url(../img/background1.jpg);    
 }
 .black{
     background-color: black;
 }
 
 .half-circle{
-    width: 400px;
-    height: 200px;
+    width: 500px;
+    height: 300px;
     background-color: #A41245;
     border-bottom-left-radius: 90px;  
     border-bottom-right-radius: 250px; 
     border: 10px solid #121212;
     border-bottom: 0;
-    margin-top: 500px;
+    margin-top: 400px;
+    text-align: center;
 }
 .slider{
-    width: 400px;
+    width: 450px;
     margin-top: -420px;
-}
+    animation-name: fade;
+    animation-duration: 1.5s;
+} 
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
 #title{
-    height: 40px;
- 
+    color: #A41245;
+}
+.b-paragraph{
+    margin-top: 150px;
+    display: inline-block;
+    font-size: 60px;
+    color: white;
+    font-weight: bolder;
+    width: 80%;
+    line-height: 1;
+    letter-spacing: 3px;
+    text-align: center;
 }
 
 .header{
@@ -67,12 +85,306 @@ body{
 .menu{
     display: flex;
     width: 45%;
-    justify-content: space-around;
 }
 .menus{
     font-size: 25px;
+    margin-left: 30px;
     
 }
 .socialmediaicons{
     width: 35%;
 }
+/* Banner */
+#banner{
+    display: flex;
+    margin-top: 0;
+    padding: 260px 0 100px;
+    
+}
+.bannerbio, .bannerphoto{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    
+    
+}
+.bannerbio{
+    flex-direction: column;
+}
+#s-b-paragraph, .b-paragraph{
+    width: 80%;
+    margin: 0 auto;
+}
+.s-b-paragraph{
+    margin-top: 100px;
+    color: #b8b8b8;
+    font-size: 20px;
+    letter-spacing: 2px;
+    text-align: center;
+    line-height: 1.5;
+}
+/*skills */
+
+.skills{
+    height: 600px;
+    width: 100%;
+    background-color: transparent;
+}
+
+a{
+
+    text-decoration: none;
+}
+
+input {
+
+    display: none;
+}
+
+.container {
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    max-width: 600px;
+    max-height: 600px;
+    display: flex;
+    transform-style: preserve-3d;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 120px;
+}
+
+.cards {
+    position: relative;
+    height: 600px;
+    width: 480px;
+    margin-bottom: 20px;
+    perspective: 2000px;
+    transform-style: preserve-3d;
+}
+
+.cards label {
+
+    position: absolute;
+    width: 100%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    cursor: pointer;
+    transition: transform 0.55s ease;
+}
+
+.cards .card{
+
+    position: relative;
+    height: 100%;
+    background-color: #121212;
+    border-radius: 10px;
+    padding: 30px 35px;
+}
+
+.card .image{
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.card .image img{
+    border-radius: 5px;
+    box-shadow: 15px 15px 40px rgba(0, 0, 0, 50%);
+    margin-top: 23px;
+    width: 100%;
+    height: 350px;
+}
+
+.card .image{
+
+    text-align: center;
+}
+
+.card .infos{
+
+    display: block;
+    text-align: end;
+    padding-top: 60px;
+}
+
+.infos span{
+
+    display: block;
+}
+
+.infos .name{
+
+    font-size: 30px;
+    color: var(--current-color1);
+    letter-spacing: 8px;
+    margin-bottom: 20px;
+    padding-left: 20%;
+    transition: all .6s ease;
+}
+
+.infos .lorem{
+
+    font-size: 15.5px;
+    color: #ECEAED;
+    letter-spacing: 3px;
+}
+
+.card .btn-contact{
+
+    width: 100%;
+    height: 60px;
+    margin: 35px auto;
+    border-radius: 5px;
+    background-color: var(--current-color1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 25px;
+    letter-spacing: 10px;
+    font-weight: 700;
+    transition: all .7s ease;
+}
+
+.card .socials{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+}
+
+
+
+
+#s1:checked~.cards #slide4,
+#s2:checked~.cards #slide5,
+#s3:checked~.cards #slide1,
+#s4:checked~.cards #slide2,
+#s5:checked~.cards #slide3 {
+    box-shadow: 0 15px 35px 0 rgba(0, 0, 0, 45%);
+    transform: translate3d(-70%, 0, -220px);
+    --current-color1: #ECEAED;
+    --current-color2: #121212;
+}
+
+#s1:checked~.cards #slide5,
+#s2:checked~.cards #slide1,
+#s3:checked~.cards #slide2,
+#s4:checked~.cards #slide3,
+#s5:checked~.cards #slide4 {
+    box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 45%);
+    transform: translate3d(-35%, 0, -120px);
+    --current-color1: #ECEAED;
+    --current-color2: #121212;
+}
+
+#s1:checked~.cards #slide1,
+#s2:checked~.cards #slide2,
+#s3:checked~.cards #slide3,
+#s4:checked~.cards #slide4,
+#s5:checked~.cards #slide5 {
+    box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 50%);
+    transform: translate3d(0, 0, 0);
+    --current-color1: #fad00c;
+    --current-color2: #ECEAED;
+}
+
+#s1:checked~.cards #slide2,
+#s2:checked~.cards #slide3,
+#s3:checked~.cards #slide4,
+#s4:checked~.cards #slide5,
+#s5:checked~.cards #slide1 {
+    box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 45%);
+    transform: translate3d(35%, 0, -120px);
+    --current-color1: #ECEAED;
+    --current-color2: #121212;
+}
+
+#s1:checked~.cards #slide3,
+#s2:checked~.cards #slide4,
+#s3:checked~.cards #slide5,
+#s4:checked~.cards #slide1,
+#s5:checked~.cards #slide2 {
+    box-shadow: 0 15px 35px 0 rgba(0, 0, 0, 45%);
+    transform: translate3d(70%, 0, -220px);
+    --current-color1: #ECEAED;
+    --current-color2: #121212;
+}
+#skillsdiv{
+    width: 100%;
+    margin-top: 100px;
+}
+.h1-div{
+    width: 100%;
+    color: white;
+    text-align: center;
+    font-size: 50px;
+    letter-spacing: 6px;
+    font-weight: 900;
+}
+
+/* Projects div */
+#projects-div{
+
+    width: 100%;
+    margin-top: 200px;
+}
+#skillsp, #projectp{
+    margin: 0 auto;
+    width: 50%;
+    margin-top: 100px;
+}
+.projectstabs{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+.tabs{
+    color: black;
+    margin-left: 50px;
+    background-color: white;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    padding: 10px 10px;
+    font-weight: 900;
+    font-size: 25px;
+    border-radius: 5px;
+    border-color: #b8b8b8;
+}
+.grid-container {
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    width: 80%;
+    margin-top: 50px;
+    column-gap: 10px;
+    row-gap: 10px;
+
+}
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    font-size: 30px;
+    text-align: center;
+    border-radius: 5px;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  .grid-item img{
+    width: 550px;
+  }
+
+  .d-none{
+    display: none;
+  }
+  /* About me */
+
+  #aboutme-div{
+    width: 100%;
+    margin-top: 90px;
+  }
