--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,9 +5,6 @@
     font-family: 'Finlandica', sans-serif;
     font-family: 'Inter', sans-serif;
 }
-body{
-
-}
 .black{
     background-color: black;
 }
@@ -57,7 +54,6 @@ body{
 }
 
 .header{
-    height: 150px;
     width: 80%;
     display: flex;
     position: fixed;
@@ -517,4 +513,121 @@ input {
   .tableheader td{
     border: 1px solid  black;
   }
+
+  /* Media query Mobile */
   
+  @media only screen and (max-width:414px){
+    .header{
+      flex-direction: column;
+      padding: 0;
+      width: 100%;
+      min-height: 150px;
+    }
+    .logo{
+
+      width: 80%;
+    }
+    .menu, .logo, .socialmediaicons{
+      padding: 10px;
+    }
+    .socialmediaicons{
+      padding-top: 10px;
+      width: 80%;
+      display: flex;
+    }
+    .fa, #connectbutton{
+      margin-left: 10px;
+    }
+    .menus{
+      margin: 0;
+      font-size: 20px;
+    }
+    .menu{
+      display: flex;
+      width: 80%;
+      justify-content: space-around;
+      margin-top: 10px;
+    }
+    #banner{
+      padding-top: 300px;
+      flex-direction: column;
+    }
+    #banner >div{
+      width: 400px;
+      padding: 10px 10px;
+    }
+    .cards{
+      width: 250px;
+      height: 400px;
+    }
+    .container{
+      padding: 10px 10px;
+    }
+    .card .infos{
+      padding-top: 0px;
+    }
+    .infos .name{
+      font-size: 20px;
+      padding: 10px;
+      box-sizing: border-box;
+      letter-spacing: 3px;
+    }
+    #skillsp, #projectp{
+      width: 90%;
+    }
+    .pt-100{
+      padding-top: 100px;
+    }
+    .projectstabs{
+      justify-content: space-between;
+    }
+    .tabs{
+      width: 100px;
+      padding: 0;
+      font-size: 15px;
+      margin-left: 0px;
+      padding-top: 10px;
+    }
+    .grid-container{
+      grid-template-columns: auto auto;
+      
+    }
+    .grid-item{
+      width: 100%;
+    }
+    .grid-item img{
+      width: 100%;
+    }
+    #contact-div{
+      width: 90%;
+      height: 920px;
+    }
+    .contactform{
+      grid-template-columns: auto;
+      row-gap: 0px;
+    }
+    .contactform input{
+      margin-top: 50px;
+    }
+    .contactform :nth-child(6){
+      margin-top: 60px;
+    }
+    footer{
+      flex-direction: column;
+    }
+    .social-media{
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    .logo h1{
+      margin-top: 40px;
+    }
+    .mt-0{
+      margin-top: 0px;
+    }
+    .w-100{
+      width: 100%;
+    }
+  }
